# cargo-features = ["profile-rustflags"]
[package]
name = "quarto"
authors = ["Carl Smith <cffsmith@google.com>", "Dominik Maier <domenukk@gmail.com>"]
version = "0.2.0"
edition = "2021"
description = "Your friendly Quarto game"
license = "MIT OR Apache-2.0"
repository = "https://github.com/domenukk/quarto_rs"
readme = "README.md"
keywords = ["game"]
categories = ["game"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.heavy-opt]
inherits = "release"
opt-level = 3
lto = "fat"
rustflags = ["-C", "target-cpu=native"]
